# BeginsWithSearch

./: Cargo.toml  README.md
src/: binary_search.rs  jaro_search.rs  lib.rs  search.rs  store_item.rs  text_store.rs
