[package]
name = "begins_with_search"
version = "0.1.0"
license = "GPLv3"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simsearch = "0.2.3"

[dev-dependencies]
simsearch = "0.2.3"
